--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-<h1>Hi</h1>
-<p>paragraphe n°1</p>
+<h1><u>Hi</u></h1>
+<p><i>paragraphe n°1</i></p>
 </body>
 </html>
