--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <style type="text/css">
 body{
-    background-color: #3498db;
+    background-color: #e74c3c;
     color: white;
 }
 
@@ -14,6 +14,7 @@ body{
 </style>
 <body>
 <h1><u>Hola a todos</u></h1>
-<p><i>paragraphe n°1</i></p>
+    <p><i><b>paragraphe n°1</b></i></p>
+    <p><i>paragraphe n°2</i></p>
 </body>
 </html>
